feature:클라이언트 데이터 요청 통합 프로세스 보류
